--- a/pom.xml
+++ b/pom.xml
@@ -165,14 +165,15 @@
                     </hostedWebapp>
                     <noServer>true</noServer>
                     <!-- Remove draftCompile when project is ready -->
-                    <draftCompile>true</draftCompile>
+                    <draftCompile>false</draftCompile>
                     <compileReport>true</compileReport>
                     <style>PRETTY</style>
-                    <strict>true</strict>
+                    <strict>false</strict>
                     <runTarget>http://localhost:8080/mcloud-selfcare</runTarget>
                     <validateOnly>true</validateOnly>
                     <logLevel>ALL</logLevel>
                     <localWorkers>1</localWorkers>
+                    <skip>true</skip>
                 </configuration>
                 <executions>
                     <execution>
@@ -200,6 +201,7 @@
                         <contextPath>/mcloud-selfcare</contextPath>
                     </webApp>
                     <scanIntervalSeconds>5</scanIntervalSeconds>
+                    <reload>manual</reload>
                 </configuration>
             </plugin>
         </plugins>
